[package]
name = "rat"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.0"
rsa = "0.9.8"
screenshots = "0.8.10"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "*"
futures-util = "*"
url = "2.5.4"
gethostname = "1.0.1"
hex = "0.4.3"
aes-gcm = "0.10.3"
sha2 = "0.10.9"
