[package]
name = "rat"
version = "0.1.0"
edition = "2021"

[dependencies]
#Network
tokio-tungstenite = "*"
netstat2 = "0.11"
url = "2.5.4"
gethostname = "1.0.1"
#Async
tokio = { version = "1", features = ["full"] }
futures-util = "*"
once_cell = "1.21.3"
#Crypto
rand = "0.8.0"
rsa = "0.9.8"
hex = "0.4.3"
aes-gcm = "0.10.3"
sha2 = "0.10.9"
#Features
xcap = "0.5.1"
