[package]
name = "rat_server"
version = "0.1.0"
edition = "2021"

[dependencies]
tungstenite = "0.26.1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "*"
futures-util = "*"
serde_json = "1.0"
rsa = "0.9.8"
rand = "0.8"
hex = "0.4.3"
aes-gcm = "0.10.3"
base64 = "0.22.1"
sha2 = "0.10.9"
async-trait = "0.1.88"
once_cell = "1.21.3"
