[package]
name = "rat_server"
version = "0.1.0"
edition = "2021"

[dependencies]
#Network
tungstenite = "0.26.1"
tokio-tungstenite = "*"
#Async
tokio = { version = "1", features = ["full"] }
once_cell = "1.21.3"
futures-util = "*"
#Cryptography
rsa = "0.9.8"
rand = "0.8"
hex = "0.4.3"
aes-gcm = "0.10.3"
sha2 = "0.10.9"
#Features
serde_json = "1.0"

